<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.SignUpFragment">

    <EditText
        android:id="@+id/username"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:drawableRight="@drawable/user"
        android:drawablePadding="20dp"
        android:hint="اسم المستخدم" />


    <EditText
        android:id="@+id/email"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:drawableRight="@drawable/ic_markunread_24px"
        android:drawablePadding="20dp"
        android:hint="البريد الالكتروني"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/password"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:drawableRight="@drawable/lock"
        android:drawablePadding="20dp"
        android:hint="كلمة السر"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/password2"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:drawableRight="@drawable/lock"
        android:drawablePadding="20dp"
        android:hint="اعد ادخال كلمة السر"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/signupbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="انشاء حساب"
        android:textSize="16dp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:layout_marginTop="20dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"

        />

    <TextView
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="أو"
        android:textColor="@android:color/white"
        android:textSize="30dp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
       android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/facebook_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/facebook" />


        <ImageButton
            android:id="@+id/google_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/google" />


    </LinearLayout>


</LinearLayout>