<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.SignInFragment">

    <EditText
        android:id="@+id/username_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColor="@android:color/white"
        android:drawableRight="@drawable/user"
        android:layout_marginTop="20dp"
        android:drawablePadding="20dp"
        android:hint="اسم المستخدم" />


    <EditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:textColor="@android:color/white"
        android:drawableRight="@drawable/lock"
        android:drawablePadding="20dp"
        android:hint="كلمة السر"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="تسجيل الدخول"
        android:textSize="16dp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:layout_marginTop="20dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"

        />

    <TextView
        android:id="@+id/test2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="أو"
        android:textColor="@android:color/white"
        android:textSize="30dp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/facebook_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/facebook" />


        <ImageButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/google" />


    </LinearLayout>


</LinearLayout>