...
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@+id/article_picture">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/comment_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_frame"
                android:hint="  تعليقك"
                android:padding="5dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submit_comment_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_send_black_24dp" />

    </LinearLayout>

...
