<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:ignore="MissingDefaultResource">


        <include
            layout="@layout/playground"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    <com.google.android.material.navigation.NavigationView

        android:id="@+id/nav_view_dashboard"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/dashboard_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>